<resources>
    <string name="app_name">Android Basics</string>
    <string name="wicked">What a wicked world!</string>
    <string name="hello">Hello World</string>
    <string name="surprise">Surprise</string>
    <string name="text_input_hint">Your typed text will be rendered bellow the button</string>
    <string name="first_number">type your first number</string>
    <string name="second_number">type your second number</string>
    <string name="sum">sum</string>
    <string name="sub">sub</string>
    <string name="multiply">multiply</string>
    <string name="division">division</string>
    <string name="grocery_list_text">tick your item and type the amount of it</string>
    <string name="zero">0</string>
    <string name="cup">Cup</string>
    <string name="knife">Knife</string>
    <string name="fork">Fork</string>
    <string name="plate">Plate</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result: $</string>
    <string name="current_item_price">%1$s $%2$d</string>
    <string name="about">ABOUT</string>
    <string name="about_content">This is an about page</string>
    <string name="back_btn">Back</string>
    string.
</resources>