<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="433dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/first_num"
            android:layout_width="134dp"
            android:layout_height="108dp"
            android:ems="10"
            android:hint="@string/first_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/second_num"
            android:layout_width="135dp"
            android:layout_height="87dp"
            android:ems="10"
            android:hint="@string/second_number"
            android:inputType="number" />

        <Button
            android:id="@+id/sum"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/sum" />

        <Button
            android:id="@+id/sub"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/sub" />

        <Button
            android:id="@+id/div"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/division" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="33dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>