<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroceryListActivity">

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="481dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grocery_list_text"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/plate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="48dp"
                android:text="@string/plate" />

            <EditText
                android:id="@+id/plate_amount"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:height="49dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="@string/zero"
                android:inputType="none|number"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="48dp"
                android:text="@string/cup" />

            <EditText
                android:id="@+id/cup_amount"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:height="49dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="@string/zero"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/fork"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="48dp"
                android:text="@string/fork" />

            <EditText
                android:id="@+id/fork_amount"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:height="49dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="@string/zero"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/knife"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="48dp"
                android:text="@string/knife" />

            <EditText
                android:id="@+id/knife_amount"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:height="49dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="@string/zero"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/grocery_calculate"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/grocery_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="#000000"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>